--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "purgecss-webpack-plugin": "^0.13.0",
     "suitcss-base": "^4.0.0",
     "tailwindcss": "^0.4.0"
+  },
+  "dependencies": {
+    "npm": "^5.6.0"
   }
 }
