--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         environment:
             - MYSQL_USER=root
             - MYSQL_PASSWORD=example
+            - MYSQL_ROOT_PASSWORD=example
         ports:
             - "3306:3306"
         volumes:
